--- a/canvas.html
+++ b/canvas.html
@@ -1,3 +1,9 @@
+<!-- 
+  Author: Hunter Holderfield
+  Last modified: 2/20/20
+  Last modified by: Sam Lohbeck
+ -->
+ 
 <!DOCTYPE html>
 <html lang="en">
 <head>
